# Lexi-Core

./: .gitignore  CHANGELOG.md  LEXI_CHAT_LOG.md  README.md  pyproject.toml  requirements.txt
.agents/workflows/: autorun.md  session-end.md  upload-chatlog.md
data/: TestDeck.apkg
engine/: __init__.py  config.py  encrypt_key.py  main.py
engine/api/: __init__.py  router.py
engine/data/: __init__.py  builder.py  huffman.py  index_store.py  meaning_store.py
engine/learning/: __init__.py  db.py  sm2.py  streaks.py  wotd.py  xp_engine.py
engine/media/: __init__.py  anki_export.py  cambridge.py  images.py  ocr.py  stt.py  tts.py
engine/search/: __init__.py  bloom.py  cache.py  fuzzy.py  inverted_index.py  trie.py
engine/tests/: __init__.py  test_api.py  test_bloom.py  test_fresh_install.py  test_huffman.py  test_sm2.py  test_trie.py
installer/: LexiCore.bat  LexiCore.vbs  lexicore_setup.iss
scripts/: sample_dictionary.json
ui/: README.md  pubspec.yaml
ui/lib/: main.dart
ui/lib/pages/: dictionary_page.dart  flashcards_page.dart  home_page.dart  lexi_ai_page.dart  performance_page.dart  project_detail_page.dart  projects_page.dart  quiz_page.dart  saved_words_page.dart  settings_page.dart  splash_screen.dart
ui/lib/services/: engine_service.dart
ui/lib/theme/: liquid_glass_theme.dart
ui/lib/widgets/: autocomplete_dropdown.dart  definition_card.dart  glass_panel.dart  search_bar.dart  stats_overlay.dart
ui/test/: widget_test.dart
ui/windows/: CMakeLists.txt
ui/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ui/windows/runner/: Runner.rc  main.cpp
